# lw-ng

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  app.json  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: linting.yml  tests.yml
core/: admin.py  builder.py  forms.py  models.py  permissions.py  tests.py  urls.py  views.py
core/factories/: checklists.py  goals.py  people.py
core/fixtures/: checklists.yaml
core/migrations/: 0001_initial.py  0002_alter_checklistquestionresponse_answer_and_more.py  0002_alter_personaladvisor_user_alter_youngperson_user.py  0002_remove_personaladvisor_is_manager_and_more.py  0003_merge_20221108_1448.py  0004_alter_personaladvisor_manager.py  0004_remove_action_completed_at_and_more.py  0004_rename_created_at_action_at_and_more.py  0005_alter_personaladvisor_manager.py  0005_remove_action_at_remove_action_by_remove_goal_at_and_more.py  0006_alter_checklistquestionresponse_unique_together_and_more.py  0006_checkinquestion_checkinresponse_and_more.py  0007_remove_checkinquestionresponse_checklist.py
core/templatetags/: lw_tags.py
docs/: DATA_MODEL.md  questionnaires.md  urls.md
leavingwell/: asgi.py  settings.py  urls.py  wsgi.py
lw_common/: apps.py
lw_common/constants/: __init__.py
lw_site/: apps.py  views.py
lw_site/templatetags/: leavingwell.py
lw_yp/: apps.py  urls.py  views.py
static/styles/: _bootstrap-overrides.scss  _bootstrap-variables.scss  _hamburger-overrides.scss  style.scss
templates/: base.html  page.html
(+106 files in other folders)
