[tool.poetry]
name = "leavingwell-ng"
version = "0.1.0"
description = "Leaving Well - Next Generation"
authors = ["Kaj Siebert <kaj@k-si.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
django-compressor = "^3.1"
django-libsass = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
