[tool.poetry]
name = "leavingwell"
version = "0.1.0"
description = "Leaving Well"
authors = ["Francisco Macedo <franciscovcbm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
python-webpack-boilerplate = "^1.0.0"
django-material = "^1.11.3"
python-decouple = "^3.6"
dj-database-url = "^1.0.0"
psycopg2 = "^2.9.4"
django-heroku = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | migrations
)/
'''

[tool.isort]
profile = "black"
extend_skip = ["migrations"]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = "migrations"

